Atualizando relatorios e ajustando dashboard repository